mdapipkg/objects/Cycle_Record__c/Cycle_Record__c.object-meta.xml
<CustomObject>
    <label>Cycle Record</label>
    <nameField>
        <label>Cycle Records Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cycle Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>