mdapipkg/objects/Cycle_Record__c/fields/Fertile_Window_End__c.field-meta.xml
<CustomField>
    <fullName>Fertile_Window_End__c</fullName>
    <label>Fertile Window End</label>
    <type>Date</type>
</CustomField>