mdapipkg/objects/Cycle_Record__c/fields/Fertile_Window_Start__c.field-meta.xml
<CustomField>
    <fullName>Fertile_Window_Start__c</fullName>
    <label>Fertile Window Start</label>
    <type>Date</type>
</CustomField>