mdapipkg/objects/Cycle_Record__c/fields/Flow_Intensity__c.field-meta.xml
<CustomField>
    <fullName>Flow_Intensity__c</fullName>
    <label>Flow Intensity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 (Mild)</fullName>
            </value>
            <value>
                <fullName>2 (Moderate)</fullName>
            </value>
            <value>
                <fullName>3(Severe)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>