mdapipkg/objects/Cycle_Record__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <formula>IF(AND(NOT(ISBLANK(End_Date__c)), NOT(ISBLANK(Start_Date__c))),
   End_Date__c - Start_Date__c,
   NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>