mdapipkg/objects/Cycle_Record__c/fields/Luteal_Length__c.field-meta.xml
<CustomField>
    <fullName>Luteal_Length__c</fullName>
    <inlineHelpText>“Number of luteal days if the user measures it (usually ~14).”</inlineHelpText>
    <label>Luteal Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>