mdapipkg/objects/Cycle_Record__c/fields/Pain_Level__c.field-meta.xml
<CustomField>
    <fullName>Pain_Level__c</fullName>
    <label>Pain Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0(No pain at all )</fullName>
            </value>
            <value>
                <fullName>1 (Mild)</fullName>
            </value>
            <value>
                <fullName>2 (Moderate)</fullName>
            </value>
            <value>
                <fullName>3 (Severe)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>