mdapipkg/objects/Cycle_Record__c/fields/Period_Duration_c__c.field-meta.xml
<CustomField>
    <fullName>Period_Duration_c__c</fullName>
    <formula>IF(
  ISBLANK( End_Date__c ),
  TODAY() - Start_Date__c + 1,
  End_Date__c - Start_Date__c + 1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>