mdapipkg/objects/Cycle_Record__c/fields/Predicted_Next_Period__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Next_Period__c</fullName>
    <label>Predicted Next Period</label>
    <type>Date</type>
</CustomField>