mdapipkg/objects/Cycle_Record__c/fields/Predicted_Ovulation__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Ovulation__c</fullName>
    <label>Predicted Ovulation</label>
    <type>Date</type>
</CustomField>