mdapipkg/objects/Cycle_Record__c/fields/Prediction_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Prediction_Confidence__c</fullName>
    <label>Prediction Confidence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>