mdapipkg/objects/Cycle_Record__c/validationRules/Cycle_End_After_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Cycle_End_After_Start</fullName>
    <active>true</active>
    <description>End Date must be after Start Date</description>
    <errorConditionFormula>AND(
  NOT( ISBLANK( Start_Date__c ) ),
  NOT( ISBLANK( End_Date__c ) ),
  End_Date__c &lt; Start_Date__c
)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date cannot be before Start Date.</errorMessage>
</ValidationRule>