mdapipkg/objects/Cycle_Record__c/validationRules/Cycle_Length_Matches_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Cycle_Length_Matches_Dates</fullName>
    <active>true</active>
    <description>Length must match End - Start</description>
    <errorConditionFormula>AND(
  NOT( ISBLANK( Start_Date__c ) ),
  NOT( ISBLANK( End_Date__c ) ),
  NOT( ISBLANK( Length__c ) ),
  ( End_Date__c - Start_Date__c ) &lt;&gt; Length__c
)</errorConditionFormula>
    <errorMessage>Length must equal End Date minus Start Date.</errorMessage>
</ValidationRule>